feat: Add Quicksand as default font

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="./fonts/quicksand.css" rel="stylesheet"> 
     <title>New tab</title>
   </head>
   <body>
